# NistRng

./: .gitignore  pyproject.toml
nistrng/: functions.py  numpy_rng_test.py
nistrng/sp800_22r1a/: test.py  test_approximate_entropy.py  test_binary_matrix_rank.py  test_cumulative_sums.py  test_discrete_fourier_transform.py  test_frequency_within_block.py  test_linear_complexity.py  test_longest_run_ones_in_a_block.py  test_maurers_universal.py  test_monobit.py  test_non_overlapping_template_matching.py  test_overlapping_template_matching.py  test_random_excursion.py  test_random_excursion_variant.py  test_runs.py  test_serial.py
